Styling for IE.

--- a/src/globescope/templates/globescope/globe-scope.html
+++ b/src/globescope/templates/globescope/globe-scope.html
@@ -15,7 +15,7 @@
     <meta name="google" value="notranslate">
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
 
-    <link rel="stylesheet" href="{% static 'css/47d40bd3.main.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/d.css' %}"/>
 
 </head>
 
@@ -27,7 +27,7 @@
             <div class="central-box-inner">
                 <div class="central-box-content">
                     <!--[if lt IE 10]>
-                        <h2 class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</h2>
+                        <h2 class="old-browser">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</h2>
                     <![endif]-->
                     <noscript>
                         <h2>To use this website you need to have Javascript enabled.</h2>
