--- a/src/globescope/templates/globescope/globe-scope.html
+++ b/src/globescope/templates/globescope/globe-scope.html
@@ -15,7 +15,7 @@
     <meta name="google" value="notranslate">
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
 
-    <link rel="stylesheet" href="{% static 'css/d.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/47d40bd3.main.css' %}"/>
 
 </head>
 
