More fish scheme clues

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -62,9 +62,13 @@
 
 {% block knowledges %}
     <dl class="dc">
-        <dt>GatherInformationDC:</dt>
-        <dd> >= 10 The men drinking are complaining about the little they earn with fish</dd>
-        <dd> >= 15 The men drinking earn some money on the side at night</dd>
+        <dt>GatherInformationDC: (drunk bonus -4)</dt>
+        <dd> >= 6 The men drinking are complaining about the little they earn with fish</dd>
+        <dd>
+            >= 10 The men say that it is all <a href="/dnd/characters/Thekesh-Moltabar.html">Moltabar's</a>
+            fault and that they wish they worked for <a href="/dnd/characters/Otalan.html"></a>
+        </dd>
+        <dd> >= 14 The men drinking earn some money on the side at night</dd>
     </dl>
 {% endblock %}
 
