--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -13,7 +13,7 @@
     <ul>
         <li>Behind the fish nets there are entrances to <a href="slums-market.html">slums market</a></li>
         <li>Walk away from city center to <a href="breakers-slums.html">breakers-slums</a></li>
-        <li>Go up the goods scale to <a href="../trade-district/food-market.html">food market</a></li>
+        <li>Go up the goods scale to <a href="../trade-district/food-market.html">food market</a> (Waukeen guards there, see knowledge)</li>
         <li>Walk towards city center to <a href="harbor-slums.html">harbor slums</a></li>
     </ul>
     <p>View</p>
@@ -30,7 +30,23 @@
     <ul>
         <li>Can be found at the sharks stand.</li>
         <li>A Talos devotee</li>
-        <li>Can help to get to <a href="sea-water-slums.html">sea water slums</a> and <a href="drinking-mermaid.html">the drinking mermaid</a></li>
+        <li>Can help to get to <a href="sea-water-slums.html">sea water slums</a> and <a href="the-horrid-lust.html">The Horrid Lust</a></li>
     </ul>
 {% endblock %}
 
+{% block knowledges %}
+    <dl class="dc">
+        <dt>GatherInformationDC:</dt>
+        <dd> >= 10 The men drinking are complaining about the little they earn with fish</dd>
+        <dd>
+            >= 14 The men say that it is all <a href="/dnd/characters/Thekesh-Moltabar.html">Moltabar's</a>
+            fault and that they wish they worked for <a href="/dnd/characters/Otalan.html"></a>
+        </dd>
+        <dd> >= 18 The men drinking earn some money on the side at night</dd>
+    </dl>
+
+     <dl class="dc">
+       <dt>SpotDC: 10</dt>
+       <dd>There are guards watching out over the fishermen from food market. They wear an emblem (ReligionDC10: Waukeen emblem)</dd>
+    </dl>
+{% endblock %}
