Adding subtitle to The Horrid Lust.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -30,7 +30,7 @@
     <ul>
         <li>Can be found at the sharks stand.</li>
         <li>A Talos devotee</li>
-        <li>Can help to get to <a href="sea-water-slums.html">sea water slums</a> and <a href="the-horrid-lust.html">The Horrid Lust</a></li>
+        <li>Can help to get to <a href="sea-water-slums.html">sea water slums</a> and <a href="the-horrid-lust+pirate-inn.html">The Horrid Lust</a></li>
     </ul>
 {% endblock %}
 
