Better naming and starting to work out more slums.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -17,7 +17,7 @@
     </ol>
     <p>Neighbooring area's</p>
     <ul>
-        <li>A shrine with secret entrance to <a href="the-church-of-Talos.html">church of Talos</a></li>
+        <li>A shrine with secret entrance to <a href="church-of-Talos.html">church of Talos</a></li>
         <li>In the back of brewery a stinking passage (FortDC12: nauseated, see BreathDC) to <a href="cave-slums.html">cave slums</a></li>
         <li>Towards the light, outside to <a href="fisher-boats.html">fisher boats</a></li>
     </ul>
