Finishing the slums for now.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/breakers-slums.html
@@ -20,8 +20,8 @@
     </ul>
     <p>Neighbooring area's</p>
     <ul>
-        <li>There is a stair winding up the cliff to <a href="church-of-Valkur.html">The Church of Valkur</a></li>
-        <li>The cliff face is crawling with small cave's forming <a href="cave-slums.html">The Cave Slums</a></li>
+        <li>There is a stair winding up the cliff to <a href="church-of-Valkur.html">Lighthouse / The Church of Valkur</a></li>
+        <li>The cliff face is crawling with small caves forming <a href="cave-slums.html">The Cave Slums</a></li>
         <li>
             The pool in the middle of this area leads to <a href="sea-water-slums.html">The Sea Water Slums</a>
             (SpotDC 13: to notice swimmers deeper in the pool)
