--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/church-of-Waukeen.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/church-of-Waukeen.html
@@ -1,3 +1,66 @@
 {% extends "dnd/abstract/place.html" %}
 
-assassination attempt on inquisitor, guards distracted (how?)
+{% block title %}The Church of Waukeen{% endblock %}
+{% block summary %}No summary{% endblock %}
+
+{% block events %}
+    <p>
+        Walking up the stairs an <a href="../../../obstacles/03-poor-life-in-Yauhnn/assasination-attempt.html">assassination attempt</a>
+        takes place.
+    </p>
+{% endblock %}
+
+{% block locations %}
+
+    <p>The entrance</p>
+    <ul>
+        <li>At the base of the church is the weighing square where goods wait for weighing.</li>
+        <li>Two big scales on each side of the stairs lead to the next city level.</li>
+        <li>An elevator in right "pillar", leads to next city level and 1st + 2nd floor</li>
+        <li>Stairs to all 3 levels in the left pillar, usually guarded</li>
+    </ul>
+
+    <p>Neighbouring area's</p>
+    <ul>
+        <li>That weighing square on city ground level is the entry to the <a href="harbor/">harbor</a></li>
+        <li>On the north side the weighing square leads to <a href="../slums-district/harbor-slums.html">harbor slums</a></li>
+        <li>On the south sides weighing square leads to <a href="../noble-district/wannabe-nobles.html">wannabe nobles</a></li>
+        <li>The church lies in front of <a href="big-market.html">the big market</a> on 1st city level</li>
+    </ul>
+
+    <p>Inside</p>
+    <ul>
+        <li>1st floor, sacred shrine, where goods are blessed inside the elevator/scale</li>
+        <li>2nd floor, storage where confiscated/traded goods are kept</li>
+        <li>3rd floor, more (precious) storage and clerics/monks sleeping quarters</li>
+    </ul>
+{% endblock %}
+
+{% block achievements %}
+    <p>no achievements</p>
+{% endblock %}
+
+{% block creatures %}
+    <p>no creatures</p>
+{% endblock %}
+
+{% block traps %}
+    <p>no traps</p>
+{% endblock %}
+
+{% block conditions %}
+    <p>no conditions</p>
+{% endblock %}
+
+{% block knowledges %}
+    <p>no knowledges</p>
+{% endblock %}
+
+{% block items %}
+    <p>no items</p>
+{% endblock %}
+
+{% block misc %}
+    <p>no misc</p>
+{% endblock %}
+
