Adding a number of hooks that should be extended upon.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/church-of-Waukeen.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/trade-district/church-of-Waukeen.html
@@ -25,7 +25,7 @@
         <li>That weighing square on city ground level is the entry to the <a href="harbor/">harbor</a></li>
         <li>On the north side the weighing square leads to <a href="../slums-district/harbor-slums.html">harbor slums</a></li>
         <li>On the south sides weighing square leads to <a href="../noble-district/wannabe-nobles.html">wannabe nobles</a></li>
-        <li>The church lies in front of <a href="big-market.html">the big market</a> on 1st city level</li>
+        <li>The church lies in front of and is entry to <a href="big-market.html">the big market</a> on 1st city level</li>
     </ul>
 
     <p>Inside</p>
