Making the character directory a little more manageble.

--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/fisher-boats.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block creatures %}
-    <h4><a href="/dnd/characters/Sjahnsesh.html">Sjahnsesh</a> - Locathah captain</h4>
+    <h4><a href="/dnd/characters/Sjahnsesh+shark-hunter.html">Sjahnsesh</a> - Locathah captain</h4>
     <ul>
         <li>Can be found at the sharks stand.</li>
         <li>A Talos devotee</li>
@@ -40,7 +40,7 @@
         <dd> >= 10 The men drinking are complaining about the little they earn with fish</dd>
         <dd>
             >= 14 The men say that it is all <a href="/dnd/characters/Thekesh-Moltabar.html">Moltabar's</a> fault
-            and that they wish they worked for <a href="/dnd/characters/Otalan.html"></a>
+            and that they wish they worked for <a href="/dnd/characters/Otalan+delicious-fish-merchant.html"></a>
         </dd>
         <dd> >= 18 The men drinking earn some money on the side at night</dd>
     </dl>
