--- a/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
+++ b/src/templatefiles/templates/dnd/concrete/places/Yauhnn/slums-district/slums-market.html
@@ -32,7 +32,7 @@
 
 {% block creatures %}
 
-    <h4><a href="/dnd/characters/Mirika.html">Mirika</a> - insane half-elf girl</h4>
+    <h4><a href="/dnd/characters/Mirika+insane-half-elf.html">Mirika</a> - insane half-elf girl</h4>
     <p>Roll random on locations to determine whereabouts.</p>
     <dl class="dc">
         <dt>WisdomDC:</dt>
@@ -44,10 +44,10 @@
        <dd> >= 14 Clothing seem noble elven from Dalelands</dd>
     </dl>
 
-    <h4><a href="/dnd/characters/Sorakesh.html">Sorakesh</a> - blacksmith (Talos devotee)</h4>
+    <h4><a href="/dnd/characters/Sorakesh+blacksmith.html">Sorakesh</a> - blacksmith (Talos devotee)</h4>
     <p>A strong guy who makes more than fishing spears as a hobby</p>
 
-    <h4><a href="/dnd/characters/Nimry.html">Nimry</a> - sea weed lady</h4>
+    <h4><a href="/dnd/characters/Nimry+sea-weed-lady.html">Nimry</a> - sea weed lady</h4>
     <p>An old woman schooled in the powers of sea weeds</p>
 
     <h4><a href="/dnd/characters/Thekesh-Moltabar.html">Thekesh</a> - the brewery owner</h4>
