Updating a bit the context in which the adventure takes place. Finish motives for FTG.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/base.html" %}
 
 {% block content %}
-<h2>Book 1: Snake invasion</h2>
+<h2>Book 1: A Snake Invasion</h2>
 <p>Events</p>
 <ol>
     <li>Fell out of the hell into Faerun</li>
@@ -51,5 +51,14 @@
     <li>There are many oppressing situations in the world, why send down an avatar for this particular situation</li>
     <li>What happened to Lokahmee and how does he feel about his tower being destroyed.</li>
 </ol>
+
+<h2>About time</h2>
+<p>
+    Book 3: A Trade Empire, tries to become a prequel to the books by Paul Kemp.
+    In order to do that it needs to happen around 300 years before these books.
+    That means this part of the adventure takes place 300 years before the campaign setting
+    I think the chronology of the adventure of the party doesn't suffer too much from this,
+    since history of Sembia and Cormyr has not been touched so far.
+</p>
 
 {% endblock %}
