--- a/src/templatefiles/templates/dnd/abstract/game_character.html
+++ b/src/templatefiles/templates/dnd/abstract/game_character.html
@@ -23,163 +23,10 @@
 
     <hr/>
 
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Hit dice</p>
-        </div>
-        <div class="span10">
-            {% block hit-dice %}0{% endblock %}
-        </div>
-    </div>
+    {% block stats %}
+        {% include "dnd/abstract/stats.html" %}
+    {% endblock %}
 
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Initiative</p>
-        </div>
-        <div class="span10">
-            {% block initiative %}+0{% endblock %}
-        </div>
-    </div>
 
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Speed</p>
-        </div>
-        <div class="span10">
-            {% block speed %}30{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>AC</p>
-        </div>
-        <div class="span10">
-            {% block ac %}10{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Attacks</p>
-        </div>
-        <div class="span10">
-            {% block attacks %}+0{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Damage</p>
-        </div>
-        <div class="span10">
-            {% block damage %}0{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Face/Reach</p>
-        </div>
-        <div class="span10">
-            {% block face-reach %}5ft.{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Special attacks</p>
-        </div>
-        <div class="span10">
-            {% block special-attacks %}{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Special qualities</p>
-        </div>
-        <div class="span10">
-            {% block special-qualities %}{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Spell-like abilities</p>
-        </div>
-        <div class="span10">
-            {% block spell-like-abilities %}{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Saves</p>
-        </div>
-        <div class="span10">
-            {% block saves %}
-                <ul>
-                    <li>Fort 0</li>
-                    <li>Ref 0</li>
-                    <li>Will 0</li>
-                </ul>
-            {% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Abilities</p>
-        </div>
-        <div class="span10">
-            {% block abilities %}
-                <ul>
-                    <li>Str 10</li>
-                    <li>Dex 10</li>
-                    <li>Con 10</li>
-                    <li>Int 10</li>
-                    <li>Wis 10</li>
-                    <li>Cha 10</li>
-                </ul>
-            {% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Skills</p>
-        </div>
-        <div class="span10">
-            {% block skills %}{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Feats</p>
-        </div>
-        <div class="span10">
-            {% block feats %}{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Grapple</p>
-        </div>
-        <div class="span10">
-            {% block grapple %}{% endblock %}
-        </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <p>Gear</p>
-        </div>
-        <div class="span10">
-            {% block gear %}{% endblock %}
-        </div>
-    </div>
 
 {% endblock %}
