--- a/src/templatefiles/templates/dnd/abstract/stats.html
+++ b/src/templatefiles/templates/dnd/abstract/stats.html
@@ -1,5 +1,14 @@
 <div class="row-fluid">
     <div class="span2">
+        <p>Todo</p>
+    </div>
+    <div class="span10">
+        {% block todo %}{% endblock %}
+    </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span2">
         <p>Hit dice</p>
     </div>
     <div class="span10">
