Some cleaning up, both on paper and in files. Begin of writing the beginning.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
@@ -7,7 +7,6 @@
     <li>Fell out of the hell into Faerun</li>
     <li>Quest for mysterious disappearances of people and vicious snake attacks</li>
     <li>Defeated Ekanz (an ancient Yuan-Ti tiran trying to get back into power)</li>
-
 </ol>
 
 <p>Side quests</p>
@@ -49,8 +48,14 @@
     </li>
     <li>Talos is an evil God, why would the book talk about freeing people from anything instead of simply fearing people into belief</li>
     <li>There are many oppressing situations in the world, why send down an avatar for this particular situation</li>
-    <li>What happened to Lokahmee and how does he feel about his tower being destroyed.</li>
+    <li>What happened to Lokahmee and how does he feel about his tower being destroyed?</li>
 </ol>
+
+<h2>Aftermath</h2>
+<ul>
+    <li>The Book of Annihilation ends up after Morgi studied it for a while.</li>
+    <li>The manual for running a Faerun Magic Shop is taken by Kadunkle for further researching</li>
+</ul>
 
 <h2>About time</h2>
 <p>
