Some small improvements.

--- a/src/templatefiles/templates/dnd/concrete/characters/Kalong+waukeen-inquisitor.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Kalong+waukeen-inquisitor.html
@@ -4,7 +4,7 @@
 
 {% block name %}Kalong{% endblock %}
 {% block summary %}
-    Cleric, Oracle for Talos. Wants to unravel the heresy within Waukeen church.
+    Cleric, Church Inquisitor for Waukeen. Wants to unravel the heresy within Waukeen church.
 {% endblock %}
 
 {% block story %}
