Some work on hulorn.

--- a/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/00-prologue/00-events-so-far.html
@@ -23,7 +23,7 @@
 <h2>Book 2: A Noble Twist</h2>
 <p>Events</p>
 <ol>
-    <li>Asked by mayor of Reth to escort caravans which got robbed</li>
+    <li>Asked by lord of Reth to escort caravans which got robbed</li>
     <li>It turns out that Dralen an employee of Faurun Magic Shop ran by Olivet Riebelfant was robbing the caravans</li>
     <li>He sold the magic weapons to children who killed one of their own</li>
     <li>Dralen also conned the adventures in buying heavily over priced Stone To Flesh scroll</li>
