--- a/src/templatefiles/templates/dnd/concrete/obstacles/05-breaking-a-heart/index.html
+++ b/src/templatefiles/templates/dnd/concrete/obstacles/05-breaking-a-heart/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li>The necklace I'm wearing is a sign for our love (in truth it is the cursed item that trumps his will)</li>
         <li>The device I'm working on is my wedding gift to Rafana</li>
-        <li>I'm posing as mayor to protect my family in law from merchant wolfs</li>
+        <li>I'm posing as hulorn to protect my family in law from merchant wolfs</li>
     </ul>
     <p>This is the set of fake memories</p>
     <ul>
