Some stuff on main characters.

--- a/src/templatefiles/templates/dnd/concrete/characters/Mirika+insane-half-elf.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/Mirika+insane-half-elf.html
@@ -1,7 +1,7 @@
 {% extends "dnd/abstract/character.html" %}
 
 {% block todo %}
-stats!
+stats! how did Mirika get close to her father?
 {% endblock %}
 
 {% block name %}Mirika{% endblock %}
@@ -9,10 +9,15 @@ stats!
 
 {% block story %}
     <p>Mirika has her arcane powers from the human sorceress her father fell for. She's very rebellious and learned to evade her fathers magic from childhood</p>
-    <p>When her father went missing she started to look for him and came very close. Rafana was told to kill the half elf girl with too many questions, but she made Mirika insane instead, thinking that it is effectively the same. Rafana assumes Mirika is somewhere raped and dead in the country side. Instead she lives in the slums in Yauhnn</p>
+    <p>
+        When her father went missing she started to look for him and came very close. EXPLAIN!
+        Rafana was told to kill the half elf girl with too many questions, but she made Mirika insane instead, thinking that it is effectively the same.
+        Rafana assumes Mirika is somewhere raped and dead in the country side. Instead she lives in the slums in Yauhnn.
+    </p>
 {% endblock %}
 
 {% block motivation %}
+    <p>Chaotic good</p>
     <ul>
         <li>Wants to find her father <a href="Lokahmee+arch-mage.html">Lokahmee</a> and be with him</li>
         <li>Is insane due to <a href="Rafana+lady-of-the-pink-tree.html">Rafana</a></li>
