Basics for Phase Spider.

--- a/src/templatefiles/templates/dnd/concrete/characters/stats/janala.html
+++ b/src/templatefiles/templates/dnd/concrete/characters/stats/janala.html
@@ -1,17 +1,17 @@
 {% extends "dnd/abstract/stats.html" %}
 
-{% block todo %}Spell list, feats, skills{% endblock %}
+{% block todo %}Spell list, feats, skills, gear{% endblock %}
 
-{% block hit-dice %}110 (10) -> Divine Oracle (5) -> Complete Divine p.34{% endblock %}
+{% block hit-dice %}119 (11) -> Cleric (5) + Divine Oracle (6) -> Complete Divine p.34{% endblock %}
 {% block initiative %}0{% endblock %}
 {% block speed %}30{% endblock %}
 {% block ac %}10{% endblock %}
 {% block attacks %}+8{% endblock %}
 {% block damage %}1d6+2{% endblock %}
 {% block face-reach %}5ft.{% endblock %}
-{% block special-attacks %}Rebuke undead{% endblock %}
-{% block special-qualities %}Trap sense +2, Evasian (aka Prescient Sense), Divination enhancement, Uncanny Dodge{% endblock %}
-{% block spell-like-abilities %}{% endblock %}
+{% block special-attacks %}Rebuke undead {% endblock %}
+{% block special-qualities %}Trap sense +2, Evasian (aka Prescient Sense), Divination enhancement, Uncanny Dodge, Improved Uncanny Dodge{% endblock %}
+{% block spell-like-abilities %}11th level cleric{% endblock %}
 {% block saves %}
     <ul>
         <li>Fort 5</li>
