--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/beach-center.html
@@ -49,7 +49,7 @@
     <ul>
         <li><a href="beach-right.html">Right side</a> of the beach</li>
         <li><a href="beach-left.html">Left side</a> of the beach</li>
-        <li><a href="inland-center.html">Inland</a> towards the jungle</li>
+        <li><a href="inland-center.html">Inland</a> towards the jungle (hard terrain)</li>
         <li>The wild <a href="sea.html">sea</a> lies behind you</li>
     </ul>
 {% endblock %}
