--- a/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-left.html
+++ b/src/templatefiles/templates/dnd/concrete/places/big-ant-island/inland-left.html
@@ -1,1 +1,43 @@
 {% extends "dnd/abstract/place.html" %}
+
+{% block title %}Inland center{% endblock %}
+{% block summary %}No summary{% endblock %}
+
+{% block events %}
+    <p>no events</p>
+{% endblock %}
+
+{% block locations %}
+    <p>no locations</p>
+{% endblock %}
+
+{% block achievements %}
+    <p>no achievements</p>
+{% endblock %}
+
+{% block creatures %}
+    <p>no creatures</p>
+{% endblock %}
+
+{% block traps %}
+    <p>no traps</p>
+{% endblock %}
+
+{% block conditions %}
+    <p>Extreme dense growth.</p>
+{% endblock %}
+
+{% block knowledges %}
+   <dl class="dc">
+      <dt>NatureDC:</dt>
+      <dd> >=15 This land is very fertile due to the vulcanic soil</dd>
+   </dl>
+{% endblock %}
+
+{% block items %}
+    <p>no items</p>
+{% endblock %}
+
+{% block misc %}
+    <p>no misc</p>
+{% endblock %}
