--- a/src/templatefiles/templates/dnd/concrete/places/template.html
+++ b/src/templatefiles/templates/dnd/concrete/places/template.html
@@ -1,6 +1,6 @@
 {% extends "dnd/abstract/place.html" %}
 
-{% block title %}Inland center{% endblock %}
+{% block title %}No title{% endblock %}
 {% block summary %}No summary{% endblock %}
 
 {% block events %}
@@ -24,14 +24,11 @@
 {% endblock %}
 
 {% block conditions %}
-    <p>Extreme dense growth.</p>
+    <p>no conditions</p>
 {% endblock %}
 
 {% block knowledges %}
-   <dl class="dc">
-      <dt>NatureDC:</dt>
-      <dd> >=15 This land is very fertile due to the vulcanic soil</dd>
-   </dl>
+   <p>no knowledges</p>
 {% endblock %}
 
 {% block items %}
